# rust-template

./: Cargo.toml
benches/: simple_benchmark.rs
src/: lib.rs  main.rs
