[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0.32", features = [ "cargo"] }
itertools = "0.10.5"
argfile = "0.1.5"
wild = "2"
unicode-segmentation = "1.10.0"
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1"
criterion = {version = "0.3", features = ["html_reports"]}
function_name = "0.3.0"

[profile.release]
debug = 1

[[bench]]
name = "simple_benchmark"
harness = false
